--- a/src/app/orders/pages/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/pages/page-edit-order/page-edit-order.component.html
@@ -1,1 +1,6 @@
-<p>page-edit-order works!</p>
+<app-template-container title="Edit Order" >
+  <!-- (submitted)="action($event)" -->
+  <app-form-order [init]="order" *ngIf="order$ | async as order" (submitted)="action($event)">
+
+  </app-form-order>
+</app-template-container>
