--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -8,6 +8,10 @@
   <!-- <pre>{{ordersCollection | json}}</pre> -->
   <app-table-light [headers]="headers">
     <tr *ngFor="let order of this.ordersCollection">
+      <td>
+        <app-icon-edit (click)="goToEdit(order.id)"></app-icon-edit>
+        <app-icon-delete></app-icon-delete>
+      </td>
       <td>{{ order.typePresta | titlecase }}</td>
       <td>{{ order.client }}</td>
       <td>{{ order.nbJours }}</td>
