--- a/src/app/orders/pages/page-add-order/page-add-order.component.html
+++ b/src/app/orders/pages/page-add-order/page-add-order.component.html
@@ -1,1 +1,5 @@
-<p>page-add-order works!</p>
+<app-template-container title="Add Order">
+  <app-form-order [init]="order" (submitted)="action($event)">
+
+  </app-form-order>
+</app-template-container>
